# Research-Paper-Recommender-System-with-RAG

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.users/: user.json
app/: __init__.py  _api_copy.py  api.py  get_pdf.py  llm.py  mmr.py  query.py  similarity_search.py  ui_app.py  users.py
data/: paperswithcode.parquet
paper_recommender.egg-info/: PKG-INFO  SOURCES.txt
scripts/: load_model.py  quick_filter.py
