[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-recommender"
version = "0.1.0"
requires-python = ">=3.10"
description = "Research paper recommender"
readme = "README.md"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "requests",
    "pandas",
    "numpy",
    "faiss-cpu",
    "openai",
    "scikit-learn",
    "python-dotenv",
    "streamlit",
    "streamlit-pdf-viewer",
    "watchdog",
    "pypdf2",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["scripts*", "tests*"]
